pkl-core/src/test/files/LanguageSnippetTests/input/errors/userDefinedTypeParameter2.pkl
class DoIt {
  function doit<A>(a: A): A = a
}